istio/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-workloads
  labels:
    istio-injection: disabled
