istio/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: mesh-workloads
  labels:
    app: order
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: order
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: mesh-workloads
  labels:
    app: payment
spec:
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  selector:
    app: payment
